--- a/hw05/hw05.Rmd
+++ b/hw05/hw05.Rmd
@@ -24,7 +24,7 @@ tab.cap = c('Table 1: Summary of number of observations and levels for the origi
             'Table 7: Names of people with e-mails available that are not on the guest list',
             'Table 8: Combined tibble of all people either on the guest list or the e-mail list')
 
-fig.cap = c('Figure 1: Scatterplot of life expectancies between Canada and the United States with larger points for more recent observations')
+fig.cap = c('Figure 1: Boxplots of the country slope coefficients for GDP per capita versus year')
 ```
   
 ```{r packages, warning=FALSE, echo=FALSE, message=F}
@@ -77,7 +77,7 @@ The `here` package takes advantage of the second bullet point by offering a simp
 I work with the `gapminder` dataset and the continent variable, which is set as a factor.
 
 ```{r cont-factor}
-str(gapminder$continent)
+class(gapminder$continent)
 ```
   
 > *1. Drop Oceania. Filter the Gapminder data to remove observations associated with the `continent` of Oceania. Additionally, remove unused factor levels. Provide concrete information on the data before and after removing these rows and Oceania; address the number of rows and the levels of the affected factors.*
@@ -119,40 +119,43 @@ Table: `r tab.cap[1]`
 
 > *2. Reorder the levels of country or continent. Use the forcats package to change the order of the factor levels, based on summarized information of one of the quantitative variables. Consider experimenting with a summary statistic beyond the most basic choice of the mean/median. Use the forcats package in the tidyverse for this, rather than the baseR function as.factor.* 
   
-Continent was reordered by maximum value of gdpPercap, and the reordered variable was defined as cont.new.  
-```{r}
-gapminder$cont.new <- with(gapminder, fct_reorder(continent, gdpPercap, max))
-```
+For each country, we calculate the simple linear regression slope of the natural logarithm of gdpPercap against year.  We then reorder the continent factor descendingly by median country-level regression slope coefficient via the `forcats::fct_reorder()` function.  Note that the `forcats` package is automatically loaded into `R` by loading `tidyverse`.
+```{r max-gdp, fig.cap=fig.cap[1], fig.width=8, fig.height=4}
+# Add column for country regression slope
+gap.growth <- gapminder %>% 
+  group_by(country) %>% 
+  mutate(growth = cor(year, log(gdpPercap))*sd(log(gdpPercap))/sd(year))
+  
+# Default ordering
+p1 <- gap.growth %>% 
+  ggplot(aes(x=continent, y=growth)) + 
+  geom_boxplot() + 
+  xlab("Continent") +
+  ylab("Slope") +
+  ggtitle(label="Original Factor Order (alphabetical)")
 
+# Order by largest slope
+p2 <- gap.growth %>% 
+  ggplot(aes(x=fct_reorder(continent, -growth, median), y=growth)) +
+  geom_boxplot() + 
+  xlab("Continent") +
+  ylab("Slope") +
+  ggtitle(label="New Factor Order (median)")
 
-By using `levels` function, one can tell the order of continent.new has changed and was different from that of continent:
-```{r}
-sprintf("Order of continent: %s.", 
-        paste(levels(gapminder$continent),collapse=', '))
-
-sprintf("Order of continent.new: %s.", 
-        paste(levels(gapminder$cont.new), collapse=', '))
-```
-
-Also, a figure of before/after re-leveling the factor visually show that the order of the factor variable has changed.
-
-```{r, figure.width=17, figure.height=2, exercise2}
-p1 <- gapminder%>% ggplot(aes(continent, gdpPercap)) + 
-  geom_point() +
-  labs(title='Before', subtitle='(i.e. continent in original order)')
-
-p2 <- gapminder%>% ggplot(aes(cont.new, gdpPercap)) + 
-  geom_point() +
-  labs(title='After', subtitle="(i.e. continent in order of max(gdpPercap))", y='') +
-  scale_y_continuous(breaks=NULL, labels=NULL)
-
+# Compare continent factor orderings for boxplots
 grid.arrange(p1, p2, nrow=1)
+
+# Change factor level ordering for gap.growth
+levels(gap.growth$continent)
+gap.growth$continent <- with(gap.growth, fct_reorder(continent, -growth, median))
+levels(gap.growth$continent)
 ```
 
-The *after* plot below showed continent.new was properly ordered such that Africa which had the lowest gdpPercap was on the far left, followed by Oceania and so on.
+---
 
+<br>
 
-<br/><br/>
+---
   
 ## Exercise 3: File input/output (I/O) 
   **Task: Experiment with at least one of:**
@@ -166,7 +169,7 @@ The *after* plot below showed continent.new was properly ordered such that Afric
 gapminder file was exported as gapminder.csv using `write_csv()` and was read back into R using `read_csv()` and `here::here()`.
 ```{r}
 write_csv(gapminder, here::here("./hw05/gapminder4hw.csv"))
-gapminder4hw<-read_csv(here::here("./hw05/gapminder4hw.csv"))
+gapminder4hw <- read_csv(here::here("./hw05/gapminder4hw.csv"))
 ```
 
   
